--- a/pcestandar.html
+++ b/pcestandar.html
@@ -183,6 +183,62 @@
              </div>
          </div>
      </div>
+    <br>
+    <br>
+    <br>
+
+   
+
+     <div class="container-fluid bg-primary py-10 mb-10 pinguino-header">
+        <div class="container py-5">
+             <div class="row justify-content-start">
+                 <div class="col-lg-8 text-center text-lg-start">
+                 <br/>
+                     <h1 class="display-4 text-uppercase text-white mb-lg-4">Distro Elegida: UBUNTU</h1>
+                     <p class="fs-6 text-white mb-lg-6">
+                        Ante todo debemos aclarar que a pesar que cada usuario de Linux tiene su distro y escritorio preferidos, esta conclusión apunta a responder la pregunta realizada en este desempeño y esta basada
+                        en la experiencia de uso de usuarios de Windows que han tenido poco o nada de contacto previo con ese SO y la opinion de cuatro (4) personas que usan Linux a diario pero para otros propósitos
+                        diferentes al de desarrollar.<br>
+                        <br>
+                        De principio podemos afirmar que Arch Linux queda descartado para principiantes, no es buena idea abandonar Windows para meternos de lleno en un SO de pura consola.<br>
+                        Si bien distribuciones como Debian (que es la base de muchas de las distros que actualmente existen) y Linux Mint, que ofrecen instalacion flexible, que son sistemas intuitivos, 
+                        fáciles de usar y estables, que presentan diversos entornos gráficos para que no sea tan duro el cambio migratorio entre SO, no terminaron de convencernos dejando como elección ganadora a Ubuntu.<br> 
+                        Ubuntu no sólo es una de las distros más utilizadas, sino también la que nos resulto más llamativa por su simplicidad e interfaz amigable, muy al estilo Windows. 
+                        La posibilidad de usarse en ordenadores más antiguos también la adelanta un poco a sus competidores.<br>
+                        <br>
+                        Metiendonos ya más en la parte tecnica, son buenas razones para su elección:<br> 
+                        - que no sea obligatoria una cuenta de desarrollo,<br> 
+                        - actualización continua por parte de la empresa desarrolladora,<br> 
+                        - una comunidad gigante que aumenta día a día y sobrada cantidad de librerias y turoriales,<br>
+                        - empresas de GPU como NVIDIA estan invirtiendo en Linux, por lo cual sus tarjetas gráficas se pueden añadir a Ubuntu con puertos PCI o adaptadores Thundebolt,<br>
+                        - permite el trabajo en el mismo SO subyacente tanto en escritorios, servidores, la nube y dispositivos IoT, proporcionando una plataforma común para entornos de desarrollo, prueba y producción,<br>
+                        - distribución en tiempo real a través de Snaps (paquetes sencillos de crear e instalar para distribuir apps),<br>
+                        - versiones de soporte a largo plazo (LTS) entregadas cada 2 años, con 5 años de soporte estándar,<br>
+                        - es el sistema operativo elegido para la ciencia de datos y el aprendizaje automático, con soporte para marcos populares como OpenCV , TensorFlow , Keras , PyTorch y Kubeflow .<br>
+                        <br>
+                       En relación al mejor escritorio para instalar: Salvo que se use la consola como interfaz gráfica, todos los entornos (GNOME, Cinnamon, Mate, XFCE, LXDE, etc) son similares a la vista, 
+                       con variaciones relacionadas a su uso y a las apps integradas, pero ninguno presento fallas a la hora de probarlos. De tener que decidirnos por alguno, preferimos el GNOME 43 que se introdujo 
+                       en la versión 22.10 por su nueva interfas de configuración rápida, el nuevo efecto de propagación para multitarea y la intefaz de ususario dinámica que se desarrollo para el administrador de 
+                       archivos (ver release: <a href="https://release.gnome.org/43/">https://release.gnome.org/43/</a>).<br>
+                       <br>
+                       Si hablamos de disponibilidad de herramientas de programación y desarrollo, la mayoría de esas herramientas generales son nativas de Linux, como python, Ruby, Git, C, C ++, php y están disponibles 
+                       de forma predeterminada (actualizadas a Python 3.10, PHP 8.1, Ruby 3.1, Perl 5.34, Go 1.19, GCC 12.2, Rust 1.61). A continuación haremos un resumen de las mas recomendadas:<br>
+                       Herramientas como Juju, Microk8s y Multipass (para conocer un poco más de estas herramientas cliquea en los siguientes enlaces: <a href="https://juju.is/">https://juju.is/</a>, 
+                       <a href="https://microk8s.io/">https://microk8s.io/</a>, <a href="https://multipass.run/">https://multipass.run/</a>), hacen que el desarrollo, las pruebas y la construcción cruzada 
+                       sean fáciles y asequibles. También nos encontramos con Aplicaciones principales de productividad como LibreOffice 7.4, Thunderbird 102 y Firefox 105.
+                       Otras herramientas de desarrollo que se incluyen son Visual Studio Code, IntelliJ, GitKraken, Unity y Blender.<br>
+                       <br>
+                       Para cerrar el tema, algo para destacar es que según al página oficial de Ubuntu, las nuevas ediciones para desarrolladores de Ubuntu Desktop se lanzan cada 6 meses, con 9 meses de soporte y acceso 
+                       al último kernel, bibliotecas y nuevas características del sistema operativo ascendente.
+                   </p>
+                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
+                         <a href="https://ubuntu.com/" class="btn btn-outline-light border-2 py-md-3 px-md-5 me-5">Ver UBUNTU</a>
+                        
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </div>
      
   
 
